# anihistory_backend

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
.sqlx/: query-4a63d2a9b5fea01c249f38a67d7fe0b321a218676c3d9c056bfeab1795ef1589.json  query-8548ceffbc18e6d2904ff801affe0736543785e66a4ddf9ae291eaca67bb2dce.json  query-8554b8a4432df467daf609e59149c309e64e0906f59e2f87bcd51ce2bdf9dd0c.json  query-b7f9c7cd393d2a53bb28233cb5cc312138a7036a2419d100d7a24fb96658eea6.json  query-db0045f2a5a1e4a1ef3b2a1cd6bf1ff199fc0ba60c2d9acb8074947f3c23e232.json  query-fe09ca536d84d928b4d93e74a92155458731ee4bb30cfdccd758e8bd17926cab.json
migrations/: 20250828031108_init.sql
src/: anilist_query.rs  database.rs  main.rs  schema.rs
src/anilist/: mod.rs
src/database/: mod.rs  models.rs
src/s3/: mod.rs
