cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "anihistory_server"
version = "0.4.0"
authors = ["Tyler Bratton <tylerbratton96@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.103.0"
axum = { version = "0.8.4", features = ["default", "tokio", "matched-path"] }
chrono = { version = "0.4.7", features = ["serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.98"
serde_derive = "1.0.98"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "chrono" ] }
tokio = { version = "1.47.1", features = ["default", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["default", "cors"] }
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = { version = "0.3.19", features = ["default", "env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

#[profile.dev]
#debug = 0
#codegen-backend = "cranelift"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"